@@ -9,6 +9,10 @@ Version 7.12.0.1 [requires libcurl-7.11.2 or better]
         * Use the new CURL_READFUNC_ABORT return code where appropriate
           to avoid hanging in perform() when read callbacks are used.
 
+        * Added support for libcurl 7.12.1 CURLOPT features:
+          SOURCE_HOST, SOURCE_USERPWD, SOURCE_PATH, SOURCE_PORT,
+          PASV_HOST, SOURCE_PREQUOTE, SOURCE_POSTQUOTE.
+
 2004-06-08  Markus F.X.J. Oberhumer <mfx>
 
         * Setting CURLOPT_POSTFIELDS now allows binary data and
